@@ -25,6 +25,9 @@ import com.echothree.control.user.filter.common.spec.FilterAdjustmentFixedAmount
 import com.echothree.model.control.accounting.server.control.AccountingControl;
 import com.echothree.model.control.filter.common.FilterConstants;
 import com.echothree.model.control.filter.server.control.FilterControl;
+import com.echothree.model.control.party.common.PartyTypes;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.uom.server.control.UomControl;
 import com.echothree.model.data.accounting.server.entity.Currency;
 import com.echothree.model.data.filter.server.entity.FilterAdjustment;
@@ -41,6 +44,9 @@ import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.command.EditMode;
 import com.echothree.util.common.form.BaseForm;
 import com.echothree.util.server.control.BaseEditCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
 import com.echothree.util.server.string.AmountUtils;
 import com.echothree.util.server.validation.Validator;
@@ -51,33 +57,41 @@ import java.util.List;
 
 public class EditFilterAdjustmentFixedAmountCommand
         extends BaseEditCommand<FilterAdjustmentFixedAmountSpec, FilterAdjustmentFixedAmountEdit> {
-    
+
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> SPEC_FIELD_DEFINITIONS;
     private final static List<FieldDefinition> costEditFieldDefinitions;
     private final static List<FieldDefinition> priceEditFieldDefinitions;
     
     static {
-        SPEC_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-            new FieldDefinition("FilterKindName", FieldType.ENTITY_NAME, true, null, null),
-            new FieldDefinition("FilterAdjustmentName", FieldType.ENTITY_NAME, true, null, null),
-            new FieldDefinition("UnitOfMeasureName", FieldType.ENTITY_NAME2, false, null, null),
-            new FieldDefinition("UnitOfMeasureKindName", FieldType.ENTITY_NAME, false, null, null),
-            new FieldDefinition("UnitOfMeasureTypeName", FieldType.ENTITY_NAME, false, null, null),
-            new FieldDefinition("CurrencyIsoName", FieldType.ENTITY_NAME, true, null, null)
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.FilterAdjustment.name(), SecurityRoles.FilterAdjustmentFixedAmount.name())
+                ))
         ));
+
+        SPEC_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("FilterKindName", FieldType.ENTITY_NAME, true, null, null),
+                new FieldDefinition("FilterAdjustmentName", FieldType.ENTITY_NAME, true, null, null),
+                new FieldDefinition("UnitOfMeasureName", FieldType.ENTITY_NAME2, false, null, null),
+                new FieldDefinition("UnitOfMeasureKindName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("UnitOfMeasureTypeName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("CurrencyIsoName", FieldType.ENTITY_NAME, true, null, null)
+        );
         
-        costEditFieldDefinitions = Collections.unmodifiableList(Arrays.asList(
-            new FieldDefinition("UnitAmount:CurrencyIsoName,CurrencyIsoName", FieldType.COST_UNIT, true, null, null)
-        ));
+        costEditFieldDefinitions = List.of(
+                new FieldDefinition("UnitAmount:CurrencyIsoName,CurrencyIsoName", FieldType.COST_UNIT, true, null, null)
+        );
         
-        priceEditFieldDefinitions = Collections.unmodifiableList(Arrays.asList(
-            new FieldDefinition("UnitAmount:CurrencyIsoName,CurrencyIsoName", FieldType.PRICE_UNIT, true, null, null)
-        ));
+        priceEditFieldDefinitions = List.of(
+                new FieldDefinition("UnitAmount:CurrencyIsoName,CurrencyIsoName", FieldType.PRICE_UNIT, true, null, null)
+        );
     }
     
     /** Creates a new instance of EditFilterAdjustmentFixedAmountCommand */
     public EditFilterAdjustmentFixedAmountCommand(UserVisitPK userVisitPK, EditFilterAdjustmentFixedAmountForm form) {
-        super(userVisitPK, form, null, SPEC_FIELD_DEFINITIONS, null);
+        super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, SPEC_FIELD_DEFINITIONS, null);
     }
     
     @Override
